solving all errors

--- a/templates/agentregister.html
+++ b/templates/agentregister.html
@@ -108,6 +108,14 @@
                             Register as Agent
                         </button>
 
+                        {% if messages %}
+  {% for message in messages %}
+    <div class="alert alert-danger">
+      {{ message }}
+    </div>
+  {% endfor %}
+{% endif %}
+
                     </form>
 
                 </div>
