--- a/templates/agent/profile.html
+++ b/templates/agent/profile.html
@@ -68,7 +68,7 @@
                 </table>
 
                 <div class="text-end">
-                    <a href="#" class="btn btn-outline-primary btn-sm">
+                    <a href="/agent/profile/edit/" class="btn btn-outline-primary btn-sm">
                         Edit Profile
                     </a>
                 </div>
