final Touch remaining only

--- a/templates/agent/base.html
+++ b/templates/agent/base.html
@@ -47,7 +47,8 @@
             <a href="/agent/profile">👤 Profile</a>
             <a href="/agent/customers">📰 Customers</a>
             <a href="/agent/hockers">👥 Hockers</a>
-            <a href="/agent/payments">💰 Payments</a>
+            <a href="/agent/payments">💰 Hokers Payments</a>
+            <a href="/agent/bills">💲 All Bills</a>
             <a href="/agent/deliveries">📦 All Deliveries</a>
             <a href="/agent/logout">🚪 Logout</a>
         </div>
