--- a/templates/customer/papers.html
+++ b/templates/customer/papers.html
@@ -11,7 +11,7 @@
         + Edit/Add Paper
       </a>
       <a href="/dashboard/addbooklet" class="btn btn-outline-warning">
-        + Edit/Add Paper
+        + Edit/Booklets Paper
       </a>
     </div>
   </div>
