--- a/templates/customer/profile.html
+++ b/templates/customer/profile.html
@@ -12,7 +12,13 @@
             <div class="row">
                 <!-- Profile Photo -->
                 <div class="col-md-3 " style="display: flex; flex-direction: column; justify-content: center; align-items: center;">
-                    <div class="img-fluid rounded-circle mb-3 bg-cover" style="width:150px;background-size: cover; background-position: center;  aspect-ratio: 1/1; background-image: url('{{ user.photo.url }}');">
+                    <div class="img-fluid rounded-circle mb-3 bg-cover" 
+                         style="width:150px; background-size: cover; background-position: center; aspect-ratio: 1/1; 
+                                {% if user.photo and user.photo.url %}
+                                    background-image: url('{{ user.photo.url }}');
+                                {% else %}
+                                    background-color: #f8f9fa; background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" viewBox="0 0 24 24" fill="none" stroke="%236c757d" stroke-width="1" stroke-linecap="round" stroke-linejoin="round"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>');
+                                {% endif %}">
                     </div>
                     <h5>{{ user.name }} {{ user.surname }}</h5>
                 </div>
@@ -49,7 +55,7 @@
             </div>
         </div>
         <div class="p-3" style="display: flex; justify-content: center;">
-            <a href="/dashboard/editprofile" class="btn btn-warning">Edit Profile</a>
+            <a href="/dashboard/profile/edit/" class="btn btn-warning">Edit Profile</a>
         </div>
     </div>
 </div>
